tests/ui/attributes/no-mangle-closure.stderr
error: `#[no_mangle]` cannot be used on a closure as it has no name
  --> $DIR/no-mangle-closure.rs:9:6
   |
LL |     (#[no_mangle] || y.0[0])()
   |      ^^^^^^^^^^^^

error: aborting due to 1 previous error

